# site_coffee

./: .gitignore  db.sqlite3  pyproject.toml
base_static/static/base/css/: base.css
base_static/static/cart/css/: styles.css
base_static/static/cart/js/: cart.js
cart/: cart.py  urls.py  views.py
diploma/: settings.py  urls.py
main/: admin.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_menu.py  0003_product_delete_menu.py
main/static/main/css/: about.css  index.css  menu.css
main/templates/main/: about.html  base.html  index.html  menu.html  test.html
menu/: admin.py  models.py  views.py
menu/migrations/: 0001_initial.py  0002_delete_task.py
menu/static/menu/css/: cart-styles.css  styles.css
menu/templates/: adas  base.html  menu.html
static/css/: style.css
templates/: base.html
